fixed spacing between sections

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -61,7 +61,7 @@ textarea {
 
 @media screen and (min-width: 551px) and (max-width: 1250px) {
    #contact {
-        padding-top: 5rem;
+        padding-top: 7rem;
    }
    
     .contact-container {
